--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,15 +41,15 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JoeDaBu/Flash.git"
+    "url": "git+https://github.com/JoeDaBu/flash.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/JoeDaBu/Flash/issues"
+    "url": "https://github.com/JoeDaBu/flash/issues"
   },
-  "homepage": "https://github.com/JoeDaBu/Flash#readme",
+  "homepage": "https://github.com/JoeDaBu/flash#readme",
   "devDependencies": {
     "prisma": "^4.9.0"
   }
