--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -37,20 +35,8 @@
       "last 1 safari version"
     ]
   },
-  "description": "NWPlus Hackathon",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JoeDaBu/flash.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JoeDaBu/flash/issues"
-  },
-  "homepage": "https://github.com/JoeDaBu/flash#readme",
   "devDependencies": {
-    "prisma": "^4.9.0"
+    "prisma": "^4.9.0",
+    "tailwindcss": "^3.2.4"
   }
 }
