--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "dev": "nodemon ./server/server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -38,20 +41,8 @@
       "last 1 safari version"
     ]
   },
-  "description": "NWPlus Hackathon",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JoeDaBu/flash.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JoeDaBu/flash/issues"
-  },
-  "homepage": "https://github.com/JoeDaBu/flash#readme",
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "prisma": "^4.9.0"
   }
 }
