--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flash",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@prisma/client": "^4.9.0",
     "@testing-library/jest-dom": "^5.16.5",
