--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "flash",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "dependencies": {
     "@prisma/client": "^4.9.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,8 +14,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
-    "react-scripts": "^2.1.3",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,7 +45,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
-    "prisma": "^4.9.0"
+    "prisma": "^4.9.0",
+    "tailwindcss": "^3.2.4"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "tailwind.config.js",
