--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "prisma": "^4.9.0",
     "tailwindcss": "^3.2.4"
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "tailwind.config.js",
   "repository": {
     "type": "git",
@@ -60,5 +59,6 @@
   "bugs": {
     "url": "https://github.com/JoeDaBu/Flash/issues"
   },
-  "homepage": "https://github.com/JoeDaBu/Flash#readme"
+  "homepage": "https://github.com/JoeDaBu/Flash#readme",
+  "description": ""
 }
