--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL = "postgresql://joe:7ZizuVqmJknWsclWRaD6Iw@flashs-4763.6wr.cockroachlabs.cloud:26257/defaultdb?sslmode=verify-full"
